# tv_studio

./: .gitignore  CMakeLists.txt  Makefile  README.md  camera.h  character.h  main.cpp  move.h  plane.h  scene.h  sdladapters.h  sprite.h  vcpkg.json
build_mac/: Makefile
rsrc/sprites/characters/: readme.txt
scenes/: forest.h
src/: camera.h  character.h  main.cpp  move.h  plane.h  scene.h  sdladapters.h  sprite.h  units.h
src/scenes/: forest.h  ice.h
src/will/: collision-sensitiveness.h  prosecution.h
